<resources>
    <string name="app_name">CarCam</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_header_general">General</string>

    <string name="pref_title_auto_start">Auto Start/Stop</string>
    <string name="pref_default_auto_start">true</string>
    <string name="pref_description_auto_start">Start/Stop application when phone is on charge/discharge</string>
    <string name="pref_key_auto_start">autoStartStop</string>

    <string name="pref_title_start_on_drive">Start Record Only When Drive</string>
    <string name="pref_default_start_on_drive">true</string>
    <string name="pref_description_start_on_drive">Start application only when driving</string>
    <string name="pref_key_start_on_drive">startOnDrive</string>

    <string name="pref_title_keep_record_on_drive">Keep Record On Drive</string>
    <string name="pref_default_keep_record_on_drive">true</string>
    <string name="pref_description_keep_record_on_drive">Keep recording if disconnect to power source while driving</string>
    <string name="pref_key_keep_record_on_drive">keepRecordOnDrive</string>

    <string name="pref_title_record_on_preview">Start Record On Preview</string>
    <string name="pref_default_record_on_preview">false</string>
    <string name="pref_description_record_on_preview">Immediately record after preview available </string>
    <string name="pref_key_record_on_preview">recordOnPreview</string>

    <string name="pref_title_open_on_startup">Open on Startup</string>
    <string name="pref_default_open_on_startup">true</string>
    <string name="pref_description_open_on_startup">Open Application on Background on Startup</string>
    <string name="pref_key_open_on_startup">openOnStartup</string>

    <string name="pref_title_shutdown_on_close">Shutdown on Close (Only on Root)</string>
    <string name="pref_default_shutdown_on_close">false</string>
    <string name="pref_description_shutdown_on_close">Shut down the phone on closeing application</string>
    <string name="pref_key_shutdown_on_close">shutdownOnClose</string>

    <string name="pref_title_record_time">Record Time(Minute)</string>
    <string name="pref_default_record_time">10</string>
    <string name="pref_description_record_time">Recording time to save to file(In Minute) </string>
    <string name="pref_key_keep_record_time">recordDuration</string>

    <string name="pref_title_keep_screen_on">Always Turn On Screen</string>
    <string name="pref_default_keep_screen_on_value">false</string>
    <string name="pref_description_keep_screen_on">Keep screen on when open the application</string>
    <string name="pref_key_keep_screen_on">keepScreenOn</string>

    <string name="pref_title_maximum_brightness">Maximum Brightness</string>
    <string name="pref_default_maximum_brightness_value">false</string>
    <string name="pref_description_maximum_brightness">Change phone brightness to 100%</string>
    <string name="pref_key_maximum_brightness">maximumBrightness</string>

    <string name="pref_title_record_on_background">Record On Background</string>
    <string name="pref_default_record_on_background">false</string>
    <string name="pref_description_record_on_background">Keep recording while app in background(Require record on Preview ON)</string>
    <string name="pref_key_record_on_background">recordOnBackground</string>

    <string name="pref_title_save_on_sdcard">Save On SDCard</string>
    <string name="pref_default_save_on_sdcard">false</string>
    <string name="pref_description_save_on_sdcard">Save recorded file on SDCard</string>
    <string name="pref_key_save_on_sdcard">saveOnSDCard</string>

    <string name="pref_title_max_speed">Max Speed(mph)</string>
    <string name="pref_default_max_speed">80</string>
    <string name="pref_description_max_speed">Maximum spped for the phone to alert when running faster (in Mph) </string>
    <string name="pref_key_max_speed">maxSpeed</string>

    <string name="pref_title_use_front_camera">Use Front Camera</string>
    <string name="pref_default_use_front_camera">false</string>
    <string name="pref_description_use_front_camera">Use Front Camera to record. Useful when you need to record within cabin </string>
    <string name="pref_key_use_front_camera">useFrontCamera</string>

    <string name="pref_title_available_storage">Available Storage(Mb)</string>
    <string name="pref_default_available_storage">700</string>
    <string name="pref_description_available_storage">How much free space do you want to keep? (in MB) </string>
    <string name="pref_key_available_storage">availableStorage</string>

    <string name="pref_title_emergency_number">Emergency Number</string>
    <string name="pref_default_emergency_number">+01911</string>
    <string name="pref_description_emergency_number">Start with country code if you calling to a common number. IE:+01911</string>
    <string name="pref_key_emergency_number">emergencyNumber</string>

    <string name="pref_key_auto_setting">autoSetting</string>
    <string name="pref_title_auto_setting">Auto Setting</string>

    <string name="pref_key_safety_setting">safetySetting</string>
    <string name="pref_title_safety_setting">Safety Setting</string>

    <string name="pref_key_camera_setting">cameraSetting</string>
    <string name="pref_title_camera_setting">Camera Setting</string>
</resources>
